<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:theme="@style/Theme.AppCompat.Light"
    tools:context=".UpdateStatus"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/textViewSymptoms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_you_have_of_these_symptoms"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonselfie" />

    <EditText
        android:id="@+id/editTextTemperature"
        android:layout_width="271dp"
        android:layout_height="49dp"
        android:ems="10"
        android:hint="@string/temperature"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/buttonsubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxFever"
        tools:ignore="MissingConstraints" />

    // BACKGROUND OF BUTTON IS IN DRAWABLE : BUTTON_BACK
    <Button
        android:id="@+id/buttonsubmit"
        android:layout_width="266dp"
        android:layout_height="51dp"
        android:background="@drawable/button_back"
        android:text="@string/submit"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:onClick="Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTemperature"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/checkBoxTiredness"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="16dp"
        android:onClick="onCheckedBox"
        android:text="@string/tiredness"
        android:focusable="true"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxFever"
        app:layout_constraintEnd_toStartOf="@+id/checkBoxCough"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewSymptoms"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/checkBoxCough"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:onClick="onCheckedBox"
        android:clickable="true"
        android:text="@string/cough"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxBreathing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBoxTiredness"
        app:layout_constraintTop_toBottomOf="@+id/textViewSymptoms"
        tools:ignore="MissingConstraints"
        android:focusable="true" />

    <CheckBox
        android:id="@+id/checkBoxFever"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginBottom="157dp"
        android:onClick="onCheckedBox"
        android:text="@string/fever"
        android:focusable="true"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/checkBoxBreathing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxTiredness"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/checkBoxBreathing"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:layout_marginBottom="18dp"
        android:onClick="onCheckedBox"
        android:text="@string/breathing"
        android:focusable="true"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/editTextTemperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBoxFever"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxCough"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/imageButtonselfie"
        android:layout_width="149dp"
        android:layout_height="222dp"
        android:layout_marginTop="72dp"
        android:background="#01FFFFFF"
        android:onClick="Selfie"
        app:layout_constraintBottom_toTopOf="@+id/textViewSymptoms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/captureselfie"
        tools:ignore="ContentDescription" />



</androidx.constraintlayout.widget.ConstraintLayout>