<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screenhome"
    android:theme="@style/Theme.AppCompat.Light"
    tools:context=".Home"
    tools:ignore="ExtraText">



    <Button
        android:id="@+id/buttonHome"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="31dp"
        android:background="#00FFFFFF"
        android:onClick="Home"
        app:layout_constraintBottom_toTopOf="@+id/nestedScrollView"
        app:layout_constraintEnd_toStartOf="@+id/buttonHistory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonHistory"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:background="#00FFFFFF"
        android:onClick="History"
        app:layout_constraintBottom_toBottomOf="@+id/buttonEditLocation"
        app:layout_constraintEnd_toStartOf="@+id/buttonEditLocation"
        app:layout_constraintStart_toEndOf="@+id/buttonHome"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonEditLocation"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:background="#00FFFFFF"
        android:onClick="EditLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonHistory"
        app:layout_constraintTop_toTopOf="parent" />

    // BACKGROUND OF BUTTON IS IN DRAWABLE : BUTTON_BACK
    <Button
        android:id="@+id/buttonupdatestatus"
        android:layout_width="334dp"
        android:layout_height="54dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_back"
        android:onClick="UpdateStatus"
        android:text="@string/update_status"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="294dp"
        android:layout_height="383dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/buttonupdatestatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonHistory"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TVcatagory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/category"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.104"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonHome" />

            <EditText
                android:id="@+id/editTextcatagory"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.606"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TVcatagory" />


            <TextView
                android:id="@+id/TVName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.104"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextcatagory" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.606"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TVName" />

            <TextView
                android:id="@+id/TVDOB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/date_of_birth"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.112"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextName" />

            <EditText
                android:id="@+id/editTextDOB"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.606"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TVDOB" />

            <TextView
                android:id="@+id/TVGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/gender"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.101"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextDOB" />

            <EditText
                android:id="@+id/editTextGender"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.606"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TVGender" />

            <TextView
                android:id="@+id/TVhealthworker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/attached_health_worker"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.141"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextGender" />

            <EditText
                android:id="@+id/editTexthealthworker"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.606"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TVhealthworker" />

            <TextView
                android:id="@+id/TVQuarantineAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="You're Quarantine At"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.131"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTexthealthworker" />

            <EditText
                android:id="@+id/editTextQuarantineAt"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.606"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TVQuarantineAt" />

            <TextView
                android:id="@+id/TVyouraddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/address"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.103"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextQuarantineAt" />

            <EditText
                android:id="@+id/editTextyouraddress"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.606"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TVyouraddress" />

            <TextView
                android:id="@+id/TVQuarantineViolationTillNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/quarantine_violation_till_now"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.162"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextyouraddress" />

            <EditText
                android:id="@+id/editTextQuarantineViolationTillNow"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.606"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TVQuarantineViolationTillNow" />

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>